# Rust_Backend

./: .env.bak  .env.example  .gitignore  API_DOCUMENTATION.md  API_DOCUMENTATION_V3.md  API_REFERENCE.md  ARCHITECTURE.md  BATCH_CONFIG.md  CONFIGURABLE_WEIGHTS.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  ENHANCED_COMPARISONS_DOCUMENTATION.md  FINAL_PROJECT_SUMMARY.md  LATENCY_TESTING.md  NEXT_STEPS.md  PRODUCTION_READY.md  README.md  REPLICATION.md  RUN_PROJECT_GUIDE.md  SCALABILITY_TESTING.md  SCHEMA_UPDATE_COMPLETE.md  SCHEMA_UPDATE_SUMMARY.md  SCRIPTS_REFERENCE.md  START_HERE.md  SYSTEM_SUMMARY.md  analyze_latency.py  comprehensive_test_suite.sh  docker-compose.yml  examples.sh  latency_results.csv  latency_test.py  latency_test_results_20250718_115447.csv  migrate_data.py  phase2_summary.sh  phase3_demo.rs  phase3_plan.sh  phase_comparison.sh  (+21 more)
analysis/: README.md  analyze_latency.py  k_value_latency_results.csv  latency_results.csv  latency_test.py  latency_test_report.txt  latency_test_results_20250718_115503.csv  latency_test_results_20250718_120910.csv  plot_latency.py  plot_scalability.py  scalability_test.py
analysis copy/: latency_test.py  latency_test_report.txt
analysis_cache/: k_value_latency_results.csv  plot_latency.py
analysis_output/: endpoint_statistics.csv  percentile_analysis.csv  successful_requests.csv  time_based_analysis.csv
data/: ground_truth.json  properties.json
docs/: DEPLOYMENT.md  ML_ENGINES.md
examples/: test_phase1.rs
migrations/: 001_initial.sql  002_sample_data.sql
results/: endpoint_statistics.csv  percentile_analysis.csv  successful_requests.csv  time_based_analysis.csv
scalability_results/: scalability_report.txt  scalability_results.csv
scripts/: batch_recommendations.py  phase1_test.sh  run_batch_recommendations.sh  setup.sh  (+4 more)
(+48 files in other folders)
