[package]
name = "real-estate-recommender"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.13"
dotenvy = "0.15"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# PDF generation
printpdf = "0.6"

# Caching
moka = { version = "0.12", features = ["future"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Math and algorithms
ordered-float = "4.2"
rayon = "1.8"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
