[package]
name = "my-recommender"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"
actix = "0.13"
actix-web-actors = "4.2"
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.13"
dotenvy = "0.15"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
moka = { version = "0.12", features = ["future"] }
printpdf = "0.6"
rand = "0.8"

# AI/ML Dependencies
rayon = "1.7"
nalgebra = "0.32"

# Logging
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
